; ModuleID = '/home/carl/AnghaBench/seafile/lib/extr_net.c_sock_pton.c'
source_filename = "/home/carl/AnghaBench/seafile/lib/extr_net.c_sock_pton.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_storage = type { i32 }
%struct.sockaddr_in = type { i8*, i8*, i32 }
%struct.sockaddr_in6 = type { i8*, i8*, i32 }

@AF_INET = common dso_local global i8* null, align 8
@AF_INET6 = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sock_pton(i8* %0, i32 %1, %struct.sockaddr_storage* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.sockaddr_storage*, align 8
  %8 = alloca %struct.sockaddr_in*, align 8
  %9 = alloca %struct.sockaddr_in6*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.sockaddr_storage* %2, %struct.sockaddr_storage** %7, align 8
  %10 = load %struct.sockaddr_storage*, %struct.sockaddr_storage** %7, align 8
  %11 = bitcast %struct.sockaddr_storage* %10 to %struct.sockaddr_in*
  store %struct.sockaddr_in* %11, %struct.sockaddr_in** %8, align 8
  %12 = load %struct.sockaddr_storage*, %struct.sockaddr_storage** %7, align 8
  %13 = bitcast %struct.sockaddr_storage* %12 to %struct.sockaddr_in6*
  store %struct.sockaddr_in6* %13, %struct.sockaddr_in6** %9, align 8
  %14 = load i8*, i8** @AF_INET, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = load %struct.sockaddr_in*, %struct.sockaddr_in** %8, align 8
  %17 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %16, i32 0, i32 2
  %18 = call i32 @evutil_inet_pton(i8* %14, i8* %15, i32* %17)
  %19 = icmp eq i32 %18, 1
  br i1 %19, label %20, label %28

20:                                               ; preds = %3
  %21 = load i8*, i8** @AF_INET, align 8
  %22 = load %struct.sockaddr_in*, %struct.sockaddr_in** %8, align 8
  %23 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %22, i32 0, i32 1
  store i8* %21, i8** %23, align 8
  %24 = load i32, i32* %6, align 4
  %25 = call i8* @htons(i32 %24)
  %26 = load %struct.sockaddr_in*, %struct.sockaddr_in** %8, align 8
  %27 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %26, i32 0, i32 0
  store i8* %25, i8** %27, align 8
  store i32 0, i32* %4, align 4
  br label %45

28:                                               ; preds = %3
  %29 = load i8*, i8** @AF_INET6, align 8
  %30 = load i8*, i8** %5, align 8
  %31 = load %struct.sockaddr_in6*, %struct.sockaddr_in6** %9, align 8
  %32 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %31, i32 0, i32 2
  %33 = call i32 @evutil_inet_pton(i8* %29, i8* %30, i32* %32)
  %34 = icmp eq i32 %33, 1
  br i1 %34, label %35, label %43

35:                                               ; preds = %28
  %36 = load i8*, i8** @AF_INET6, align 8
  %37 = load %struct.sockaddr_in6*, %struct.sockaddr_in6** %9, align 8
  %38 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %37, i32 0, i32 1
  store i8* %36, i8** %38, align 8
  %39 = load i32, i32* %6, align 4
  %40 = call i8* @htons(i32 %39)
  %41 = load %struct.sockaddr_in6*, %struct.sockaddr_in6** %9, align 8
  %42 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %41, i32 0, i32 0
  store i8* %40, i8** %42, align 8
  store i32 0, i32* %4, align 4
  br label %45

43:                                               ; preds = %28
  br label %44

44:                                               ; preds = %43
  store i32 -1, i32* %4, align 4
  br label %45

45:                                               ; preds = %44, %35, %20
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local i32 @evutil_inet_pton(i8*, i8*, i32*) #1

declare dso_local i8* @htons(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
